# auto-update-unliftio

./: CHANGELOG.md  README.md  auto-update-unliftio.cabal  default.nix
.github/workflows/: haskell.yml
src/UnliftIO/: AutoUpdate.hs  Debounce.hs  Reaper.hs
src/UnliftIO/AutoUpdate/: Event.hs  Internal.hs  Thread.hs  Types.hs
src/UnliftIO/Debounce/: Internal.hs
src/UnliftIO/Reaper/: Internal.hs
test/UnliftIO/: AutoUpdateSpec.hs  DebounceSpec.hs  ReaperSpec.hs
