cabal-version:      3.0
name:               auto-update-unliftio
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
copyright:          Copyright(c) Frederick Pringle 2026
homepage:           https://github.com/fpringle/auto-update-unliftio
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base >= 4
    , unliftio

common extensions
  default-extensions:
    BangPatterns
    DeriveGeneric
    DerivingVia 
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
    RankNTypes
    UndecidableInstances
    KindSignatures
    DataKinds
    StandaloneKindSignatures
    AllowAmbiguousTypes
    DefaultSignatures
    PolyKinds
    TypeFamilies
    ConstraintKinds
    StandaloneDeriving
    Arrows
    TypeOperators

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
      UnliftIO.AutoUpdate
      UnliftIO.AutoUpdate.Internal
      UnliftIO.AutoUpdate.Types
      UnliftIO.AutoUpdate.Thread
      UnliftIO.AutoUpdate.Event

      UnliftIO.Debounce
      UnliftIO.Debounce.Internal
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite auto-update-unliftio-test
  import:
      warnings
    , deps
    , extensions
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:      -Wno-orphans
  build-depends:
    , auto-update-unliftio
    , QuickCheck
    , hspec
