cabal-version:      3.0
name:               auto-update-unliftio
version:            0.1.0.0
synopsis:           auto-update unlifted to MonadUnliftIO
description:        Efficiently run periodic, on-demand actions, in instances of [MonadUnliftIO](https://hackage-content.haskell.org/package/unliftio-core/docs/Control-Monad-IO-Unlift.html#t:MonadUnliftIO)
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
category:           Control
copyright:          Copyright(c) Frederick Pringle 2026
homepage:           https://github.com/fpringle/auto-update-unliftio
build-type:         Simple
extra-doc-files:    CHANGELOG.md

tested-with:
    GHC == 8.8.4
  , GHC == 8.10.7
  , GHC == 9.0.2
  , GHC == 9.2.8
  , GHC == 9.4.5
  , GHC == 9.6.1
  , GHC == 9.6.7
  , GHC == 9.8.2
  , GHC == 9.10.2
  , GHC == 9.12.2

source-repository head
  type:           git
  location:       https://github.com/fpringle/auto-update-unliftio

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base >= 4 && < 5
    , unliftio

library
  import:
      warnings
    , deps
  exposed-modules:
      UnliftIO.AutoUpdate
      UnliftIO.AutoUpdate.Internal
      UnliftIO.AutoUpdate.Types
      UnliftIO.AutoUpdate.Thread
      UnliftIO.AutoUpdate.Event

      UnliftIO.Debounce
      UnliftIO.Debounce.Internal

      UnliftIO.Reaper
      UnliftIO.Reaper.Internal
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite auto-update-unliftio-test
  import:
      warnings
    , deps
  default-language: Haskell2010
  other-modules:
      UnliftIO.AutoUpdateSpec
      UnliftIO.DebounceSpec
      UnliftIO.ReaperSpec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:      -Wno-orphans
  build-depends:
    , auto-update-unliftio
    , exceptions
    , hspec
    , retry
    , HUnit
